--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,7 @@
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext",
-      "es6"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext", "es6"],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
@@ -24,16 +19,7 @@
     "strict": true,
     "strictNullChecks": true,
     "target": "es2017",
-    "types": [
-      "@testing-library/cypress",
-      "@testing-library/jest-dom",
-      "@testing-library/react",
-      "cypress",
-      "jest",
-      "node",
-      "webpack-env",
-      "reflect-metadata"
-    ],
+    "types": [],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "sourceMap": true,
@@ -42,33 +28,15 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "mocks/*": [
-        "src/mocks/*"
-      ],
-      "app/*": [
-        "src/app/*"
-      ],
-      "assets/*": [
-        "src/assets/*"
-      ],
-      "constants/*": [
-        "src/constants/*"
-      ],
-      "components/*": [
-        "src/components/*"
-      ],
-      "types/*": [
-        "src/types/*"
-      ],
-      "utils/*": [
-        "src/utils/*"
-      ],
-      "pages/*": [
-        "src/pages/*"
-      ],
-      "api/*": [
-        "src/api/*"
-      ]
+      "mocks/*": ["src/mocks/*"],
+      "app/*": ["src/app/*"],
+      "assets/*": ["src/assets/*"],
+      "constants/*": ["src/constants/*"],
+      "components/*": ["src/components/*"],
+      "types/*": ["src/types/*"],
+      "utils/*": ["src/utils/*"],
+      "pages/*": ["src/pages/*"],
+      "api/*": ["src/api/*"]
     }
   },
   "exclude": ["node_modules"]
