--- a/src/mocks/tasks.json
+++ b/src/mocks/tasks.json
@@ -33,5 +33,40 @@
     "isImportant": false,
     "isCompleted": true,
     "id": 26
+  },
+  {
+    "name": "Это обновленная задача",
+    "info": "Обновленная задача",
+    "isCompleted": true,
+    "isImportant": false,
+    "id": 111
+  },
+  {
+    "name": "Это обновленная задача",
+    "info": "333333",
+    "isCompleted": true,
+    "isImportant": false,
+    "id": 222
+  },
+  {
+    "name": "Это обновленная задача",
+    "info": "Обновленная задача",
+    "isImportant": false,
+    "isCompleted": true,
+    "id": 333
+  },
+  {
+    "name": "some name",
+    "info": "Initial object",
+    "isImportant": true,
+    "isCompleted": false,
+    "id": 444
+  },
+  {
+    "name": "Попрощаться",
+    "info": "poka",
+    "isImportant": false,
+    "isCompleted": true,
+    "id": 5555
   }
 ]
